<resources>
    <string name="app_name">Proyecto_Clinica_Android1</string>
    <string name="btn_Empleado">EMPLEADOS</string>
    <string name="btn_Paciente">PACIENTES</string>
    <string name="btn_Cita">CITAS</string>
    <string name="btn_Diagnostico">DIAGNOSTICOS</string>
    <string name="btn_Parto">PARTOS</string>
    <string name="btn_Operacion">OPERACIONES</string>
    <string name="btn_Pago">PAGOS</string>
    <string name="btn_Factura">FACTURAS</string>
    <string name="btn_logOut">Cerrar Sesion</string>
    <string name="btn_Salir">Salir</string>
    <string name="caja_Usuario">Usuario</string>
    <string name="caja_Pass">Contraseña</string>
    <string name="btn_IniciarSesion">Iniciar sesión</string>
</resources>